[package]
author = ["Gustavo Cavalcante <nowayhecodes@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "web-programming::http-server"]
description = "A simple dev server in Rust."
edition = "2018"
keywords = ["web", "server", "https", "http"]
license = "MIT"
name = "hakuna"
readme = "README.md"
repository = "https://github.com/nowayhecodes/hakuna"
version = "1.0.0"

[dependencies]
hakuna_lib = {path = "hakuna_lib", version = "1.0.0", features = ["reload", "https"]}
