[package]
author = ["Gustavo Cavalcante <nowayhecodes@gmail.com>"]
categories = ["web-programming::http-server"]
description = "A zero configuration library for hosting a local folder via https. Refer to 'hakuna' for the command line tool."
edition = "2018"
keywords = ["web", "server", "https", "http"]
license = "MIT"
name = "hakuna_lib"
readme = "README.md"
repository = "https://github.com/nowayhecodes/hakuna/tree/main/hakuna_lib"
version = "1.0.0"

[lib]
name = "hakuna_lib"

[dependencies]
base64 = {version = "0.11.0", optional = true}
native-tls = {version = "0.2", optional = true}
notify = {version = "4.0.15", optional = true}
sha-1 = {version = "0.8.2", optional = true}

[features]
default = ["https"]
https = ["native-tls"]
reload = ["notify", "sha-1", "base64"]
